steve_manifests/client2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client2-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: client2-webapp
  type: ClusterIP
