steve_manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: clients-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/proxy-protocol: "v2"
#     nginx.ingress.kubernetes.io/rewrite-target: "/$proxy_protocol_tlv_azure_pel_id"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /536943814
#         pathType: Prefix
#         backend:
#           service:
#             name: client1-svc
#             port:
#               number: 80
#       - path: /536916813
#         pathType: Prefix
#         backend:
#           service:
#             name: client2-svc
#             port:
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clients-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-protocol: "v2"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client1-svc
            port:
              number: 80
